[package]
name = "judge"
version = "0.1.0"
edition = "2024"
description = "Interview panel CLI for technical interviewers — capture timestamped notes, rate candidates across key dimensions, and generate structured feedback reports"
license = "MIT"
authors = ["Hamza Zubair <hamzamohdzubair@gmail.com>"]
keywords = ["interview", "hiring", "cli", "feedback", "recruiter"]
categories = ["command-line-utilities"]
repository = "https://github.com/hamzamohdzubair/judge"
homepage = "https://github.com/hamzamohdzubair/judge"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
