[package]
name = "judge"
version = "1.0.0"
edition = "2021"
description = "TUI-based technical interview evaluation tool with question banks, live scoring, and exports"
license = "MIT"
authors = ["Hamza Zubair <hamzamohdzubair@gmail.com>"]
keywords = ["interview", "hiring", "tui", "cli", "evaluation"]
categories = ["command-line-utilities"]
repository = "https://github.com/hamzamohdzubair/judge"
homepage = "https://github.com/hamzamohdzubair/judge"
readme = "README.md"

[dependencies]
anyhow    = "1"
arboard   = "3"
chrono    = { version = "0.4", features = ["serde"] }
clap      = { version = "4", features = ["derive"] }
crossterm = "0.28"
csv       = "1"
dirs      = "5"
hex       = "0.4"
printpdf  = { version = "0.7", features = ["font_subsetting", "embedded_images"] }
rand      = "0.8"
ratatui   = "0.29"
rusqlite  = { version = "0.31", features = ["bundled"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
sha2      = "0.10"
toml      = "0.8"
ureq      = { version = "2", features = ["json"] }
